<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_log_expense"
        android:icon="@drawable/ic_nav_log"
        android:title="@string/nav_log_expense" />
    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/ic_nav_history"
        android:title="@string/nav_history" />
    <item
        android:id="@+id/navigation_analytics"
        android:icon="@drawable/ic_nav_analytics"
        android:title="@string/nav_analytics" />
    <item
        android:id="@+id/navigation_game"
        android:icon="@drawable/ic_nav_game"
        android:title="@string/nav_game" />
    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_nav_settings"
        android:title="@string/nav_settings" />
</menu>
